<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="40dp"
            android:src="@drawable/baseline_account_circle_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/inscription"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/r_nom_prenom_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/nom_et_pr_nom"
            android:padding="5dp" />
        <EditText
            android:id="@+id/r_email_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp" />
        <EditText
            android:id="@+id/r_tel_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/tel"
            android:inputType="phone"
            android:padding="5dp" />

        <EditText
            android:id="@+id/r_mdp_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/mot_de_passe"
            android:padding="5dp" />

        <EditText
            android:id="@+id/r_conf_mdp_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/confirmer_mot_de_passe"
            android:padding="5dp" />

        <Button
            android:id="@+id/r_valider_btn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:text="@string/valider" />

        <TextView
            android:id="@+id/go_to_login_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/se_connecter"
            android:textColor="@color/bleu"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>