<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<!--        Profils et autres information-->
        <LinearLayout
            android:id="@+id/profil_autres_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:src="@drawable/baseline_account_circle_24"
                />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/username_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_d_utilisateur_s"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:paddingBottom="3dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_tv"
                    android:layout_centerHorizontal="true"
                    android:text="@string/user_actu" />

            </RelativeLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:src="@drawable/baseline_qr_code_2_24"
                />
        </LinearLayout>

<!--        Compte -->
        <LinearLayout
            android:id="@+id/compte_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_below="@id/profil_autres_info_layout"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/compte_imv"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/baseline_key_24"
                />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/compte"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Compte"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/compte"
                    android:text="@string/notification_de_s_curit_changer_de_num_ro"/>
            </RelativeLayout>
        </LinearLayout>

<!--        Confidentialité -->
        <LinearLayout
            android:id="@+id/confidentialite_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_below="@id/compte_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_lock_24"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/confidTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Confidentialité"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/confidTv"
                    android:text="Bloquer des contacts, messages éphemères"/>
            </RelativeLayout>
        </LinearLayout>

<!--        Avatar -->
        <LinearLayout
            android:id="@+id/avatar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@id/confidentialite_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_add_reaction_24"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Avatar"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/avatar"
                    android:text="User Actu"/>
            </RelativeLayout>
        </LinearLayout>

<!--        Discussions -->
        <LinearLayout
            android:id="@+id/discussion_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@id/avatar_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_message_24"
                android:layout_marginRight="5dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/discussions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Discussions"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/discussions"
                    android:text="Thème, fonds d'écran, historiques des discussions"/>
            </RelativeLayout>
        </LinearLayout>

<!--        Notifications -->
        <LinearLayout
            android:id="@+id/notification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@id/discussion_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_notifications_24"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/notification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Notification"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/notification"
                    android:text="Sonneries des messages, groupes et appels"/>
            </RelativeLayout>
        </LinearLayout>

<!--        Utilisation données et stockage -->
        <LinearLayout
            android:id="@+id/utiliDonnee_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@id/notification_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_data_usage_24"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/utiliDonnee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Utilisation données et stockages"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/utiliDonnee"
                    android:text="Utilisation réseau, téléchargement auto."/>
            </RelativeLayout>
        </LinearLayout>

<!--        Langue de l'application -->
        <LinearLayout
            android:id="@+id/langue_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@id/utiliDonnee_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_language_24"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/langue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Langue de l'application"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/langue"
                    android:text="Français (langue du téléphone)"/>
            </RelativeLayout>
        </LinearLayout>

<!--        Aide -->
        <LinearLayout
            android:id="@+id/aide_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@id/langue_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_help_outline_24"
                android:layout_marginRight="5dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/aideTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Aide"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/aideTv"
                    android:text="Centre d'aide, contactez-nous, Politique de confidentialité"/>
            </RelativeLayout>
        </LinearLayout>

<!--        Inviter un contact -->
        <LinearLayout
            android:id="@+id/inviterContact_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@id/aide_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_group_24"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/inviterContactTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/inviter_un_contact"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    />
            </RelativeLayout>
        </LinearLayout>

<!--        Pied de la page -->
        <LinearLayout
            android:id="@+id/piedDeLaPage_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_below="@id/inviterContact_layout"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="from"
                android:textSize="15sp"
                android:paddingBottom="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meta"
                android:textSize="15sp"
                android:paddingBottom="2dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>